[package]
name = "participation-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
chrono = "0.4"
postgres = { version = "0.19.1", features=["with-chrono-0_4"] }
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
csv = "1.1.6"
rand = "0.8.4"
cursive = { version = "0.16.3", default-features=false, features=["crossterm-backend", "toml"] }
